# syrupy-matplotlib

./: .coveragerc  .gitignore  .justfile  .pre-commit-config.yaml  .ruff.toml  .rumdl.toml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/syrupy_matplotlib/: __init__.py  _assertion.py  _comparison.py  _config.py  _determinism.py  _extension.py  _figures.py  _fixture.py  _html_report.py  _json_report.py  _params.py  _plugin.py  _reporting.py  _types.py  _xdist.py
src/syrupy_matplotlib/templates/: basic.html.jinja2  report.html.jinja2  styles.css
tests/: conftest.py  test_assertion.py  test_comparison.py  test_config.py  test_determinism.py  test_extension.py  test_figures.py  test_html_report.py  test_json_report.py  test_params.py  test_plugin.py  test_plugin_unit.py  test_plugin_xdist.py  test_public_api.py  test_reporting.py  test_reports.py  test_syrupy_coexistence.py  test_xdist.py
